first commit: added changes from previous version of project with working SimGNN and GMN in development

--- a/.gitignore
+++ b/.gitignore
@@ -56,6 +56,13 @@ coverage.xml
 .pytest_cache/
 cover/
 
+# TODO: Better way of specifying these
+*/**/*.pyc
+*/**/**/*.pyc
+*/**/**/**/*.pyc
+*/**/**/**/**/*.pyc
+data
+
 # Translations
 *.mo
 *.pot
